# GigaAM-Featured

./: .gitignore  README.md  pyproject.toml
gigaam/: __init__.py  attention.py  audio_utils.py  decoder.py  decoding.py  encoder.py  model.py  onnx_utils.py  preprocess.py  timestamps_utils.py  types.py  vad_utils.py
tests/: test_batching.py  test_error_handling.py  test_loading.py  test_longform.py  test_longform_word_timestamps.py  test_module_structure.py  test_onnx.py  test_reading.py  test_tensor_input.py  test_timestamps.py  test_utils.py  test_vad_utils.py
